<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <Button
        android:id="@+id/set_default_ringtone"
        android:layout_width="@dimen/voice_setting_button_width"
        android:layout_height="@dimen/voice_setting_button_height"
        android:layout_marginBottom="@dimen/voice_setting_button_margin"
        android:layout_marginTop="@dimen/voice_setting_button_margin"
        android:text="@string/set_default_ringtone"/>

    <Button
        android:id="@+id/set_default_alarm"
        android:layout_width="@dimen/voice_setting_button_width"
        android:layout_height="@dimen/voice_setting_button_height"
        android:layout_marginBottom="@dimen/voice_setting_button_margin"
        android:layout_marginTop="@dimen/voice_setting_button_margin"
        android:text="@string/set_default_alarm"/>

    <Button
        android:id="@+id/set_default_notification"
        android:layout_width="@dimen/voice_setting_button_width"
        android:layout_height="@dimen/voice_setting_button_height"
        android:layout_marginBottom="@dimen/voice_setting_button_margin"
        android:layout_marginTop="@dimen/voice_setting_button_margin"
        android:text="@string/set_default_notification"/>

</LinearLayout>